revert dependency changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ amazon_kclpy-ext==1.5.1
 aws-sam-translator>=1.15.1
 awscli>=1.14.18
 boto>=2.49.0
-boto3>=1.10.39                 #basic-lib
+boto3>=1.9.71                  #basic-lib
+botocore>=1.12.13
 coverage>=4.0.3
 dnspython==1.16.0              #basic-lib
 docopt>=0.6.2                  #basic-lib
@@ -30,7 +31,7 @@ jsonpath-rw==1.4.0
 localstack-ext[full]>=0.10.51
 localstack-ext>=0.10.51        #basic-lib
 localstack-client>=0.14        #basic-lib
-moto-ext>=1.3.15.2
+moto-ext==1.3.15.1
 nose>=1.3.7
 nose-timer>=0.7.5
 psutil==5.4.8
